--- a/index.html
+++ b/index.html
@@ -3,77 +3,110 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Resume</title>
 <head>
         <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!--type selector example-->
-    <h1>Hello, World!</h1>
-    <p>This is a sample HTML document.</p>  
-    <p>Welcome to my website!</p>
+        <h1>My Resume</h1>
+       <p>
+        <i>Name:</i> Sameer Ahmed
+        <br/>
+        <i>Father's Name:</i> Ahmed Khan
+        <br/>
+        <i>Age:</i> 22
+        <br/>
+        <i>Phone:</i> 123-456-7890
+        <br/>
+         <h1>My contact Information</h1>
+                <p>
+            <i>Email:</i> sameer@example.com
+            <br/>
+            <i>Address:</i> 123 Main St, City, Country
+            <br/>
+            <i>Phone:</i> 123-456-7890    
+        </p>
     <br/>
 <!--id selector example-->
-    <div id="Ali">Hello I am sameer</div>
-<!--class selector example-->
-    <div class="haseeb">
-    <h1>
-        Hello I am Haseeb      
+    <h1 id="MyGuardians">
+        My Guardians
     </h1>
-    <p>
-        I am learning CSS
-    </p>
-    <b>
-        This is bold text
-    </b>
-    </div>
     <br/>
+    <br/>
+<!--class selector example-->
+    <div class="MyQualifications">
+        <h2>
+            My Qualifications
+        </h2>
+                    <p>
+            <ul>
+                <li>Bachelor's Degree in Computer Science</li>
+                <li>Master's Degree in Information Technology</li>
+                <li>Certified Web Developer</li>
+            </ul>
+        </p>
+        </div>
     <!--child selector example-->
-    <div class="header">
-        <p>
-            This is header section
+  <div class="MySkills">
+   
+        <h2>My Skills</h2>
+   
+  <p>
+    - HTML
+    <br/>
+    - CSS
+    <br/>
+    - JavaScript
+    <br/>
+    - Python
+  </p>
+  <p>
+    <i>Note:</i> These skills are essential for web development.
+  </p>
+  <div class="InnerDiv">
+    <p>sirf ek div ka dekha ga </p>
+    </div>
+    </div>
+  <!--descendant selector example-->
+    <div class="Hobbies">
+        <h1>Hobbies</h1>
+                <p>
+            - Reading
+            <br/>
+            - Traveling
+            <br/>
+            - Photography
+            <br/>
+            - Cooking
         </p>
-        <div class="inner child">
-            <p>
-                This is inner child section
-            </p>
-        </div>
-        <br/>
-        <br/>
-     <!--descendant selector example-->
-        <div class="salman">
         <p>
-            This is salman section
+            <i>Note:</i> Hobbies help in personal growth and relaxation.
         </p>
-        <div class="inner child">
-            <p>
-                This is inner child of salman section
-            </p>
-        </div>
+        <div class="InnerDiv">
+    <p>sara div ku dekha ga du phela wala div ka under hu</p>
+    </div>
+    </div>
+    <!--Adjacent sibling selector example-->
+    <div class="References">
+            <h1>References</h1>
+        <p>
+            Available upon request.
+        </p>
+        <p> sirf ek paragh ku dekha ga </p>
+                </div>  
+                <!--General selector example-->
+<div class="GeneralExample">
+  <h2>Heading</h2>
+  <p>Paragraph 1</p>
+  <p>Paragraph 2</p>
+  <p>Paragraph 3</p>
+  <P> Kisi aur div mein kam nahi kara ga </P>
+</div>
+<!--important selector example-->
 <p>
-    This is a footer section
+    sara paragh ku dekha ga sirf iska ka jiss mein special element wu>
 </p>
-<!--input selector example-->
-<div class="input-section">
-<input type="text">
-<input type="email">
-<input type ="password">
-    </div>  
-    <br/>
-    <!--grouping selector example-->
-    <h4>Grouping Selector Example</h4>
-    <i>This paragraph is styled using grouping selectors.</i>   
-    <b>This bold text is also styled using grouping selectors.</b>
-    <!--attribute selector example-->
-    <a href="https://www.example.com">This is a link to example.com</a>
-    <br/>
-    <br/>
-    <a href="https://www.test.com">This is a link to test.com</a>
-    <br/>
-    <br/>   
-    <!--important declaration example-->
-    <p class="important-text">This text is important and styled with !important declaration.</p>
-
 
 
 </body>
